--- a/CvMaker/index.html
+++ b/CvMaker/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root" class="p-7 "></div>
+    <div id="root" class="p-7 flex items-center justify-center  bg-gray-100 "></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
